# Hawk-OSD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: toolchain.cmake  utils.cmake
lib/: CMakeLists.txt
lib/arm-cmsis/: CMakeLists.txt
lib/stm32g474/: CMakeLists.txt  stm32g474.ld
lib/stm32g474xx/: CMakeLists.txt
src/: main.cpp  stm32g474.ld
tools/: flash.py  setup.py  st-link.cfg
